@@ -56,7 +56,7 @@ import java.util.concurrent.TimeUnit;
 @State(Scope.Thread)
 @Warmup(iterations = 3, time = 1)
 @Measurement(iterations = 5, time = 1)
-@Fork(value = 1, jvmArgs = {"--add-modules", "jdk.incubator.vector"})
+@Fork(value = 1, jvmArgs = {"--add-modules", "jdk.incubator.vector", "--enable-native-access=ALL-UNNAMED"})
 @Tag("performance")
 public class VirtdataFloatVectorsViewJmhBenchmark {
 
@@ -143,7 +143,7 @@ public class VirtdataFloatVectorsViewJmhBenchmark {
             .warmupIterations(2)
             .measurementIterations(3)
             .forks(1)
-            .jvmArgs("--add-modules", "jdk.incubator.vector")
+            .jvmArgs("--add-modules", "jdk.incubator.vector", "--enable-native-access=ALL-UNNAMED")
             .resultFormat(ResultFormatType.TEXT)
             .build();
 
@@ -155,7 +155,7 @@ public class VirtdataFloatVectorsViewJmhBenchmark {
         Options opt = new OptionsBuilder()
             .include(VirtdataFloatVectorsViewJmhBenchmark.class.getSimpleName())
             .forks(1)
-            .jvmArgs("--add-modules", "jdk.incubator.vector")
+            .jvmArgs("--add-modules", "jdk.incubator.vector", "--enable-native-access=ALL-UNNAMED")
             .build();
 
         new Runner(opt).run();
