@@ -64,7 +64,7 @@ import java.util.concurrent.TimeUnit;
 @State(Scope.Benchmark)
 @Warmup(iterations = 2, time = 2)
 @Measurement(iterations = 3, time = 3)
-@Fork(value = 1, jvmArgs = {"--add-modules", "jdk.incubator.vector"})
+@Fork(value = 1, jvmArgs = {"--add-modules", "jdk.incubator.vector", "--enable-native-access=ALL-UNNAMED"})
 @Tag("performance")
 public class ParallelExtractionBenchmark {
 
@@ -159,7 +159,7 @@ public class ParallelExtractionBenchmark {
             .warmupIterations(2)
             .measurementIterations(3)
             .forks(1)
-            .jvmArgs("--add-modules", "jdk.incubator.vector")
+            .jvmArgs("--add-modules", "jdk.incubator.vector", "--enable-native-access=ALL-UNNAMED")
             .build();
 
         new Runner(opt).run();
